[gd_scene load_steps=9 format=2]

[ext_resource path="res://cenaresultadovitoria.gd" type="Script" id=1]
[ext_resource path="res://Imagens/cenaresultado.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/ubuntu/Ubuntu-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sons/menu-sfx-select-8-sound-effect-69717408.wav" type="AudioStream" id=4]
[ext_resource path="res://Sons/selecionar_menu.wav" type="AudioStream" id=5]
[ext_resource path="res://Sons/02_kiss_you_good-bye.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "Animaçãovariaveis"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("QTDSVoltas:custom_fonts/normal_font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 35, 30 ]
}

[node name="Node2D" type="Node2D"]
scale = Vector2( 1.85531, 1.78968 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 522.13, 309.167 )
scale = Vector2( 0.544874, 0.573647 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="voltarmenu" type="Button" parent="."]
margin_left = 13.0
margin_top = 556.0
margin_right = 152.0
margin_bottom = 592.0
text = "Voltar ao Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerRanking" type="Button" parent="."]
margin_left = 854.847
margin_top = 553.755
margin_right = 993.847
margin_bottom = 589.755
text = "Ver Ranking"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.772549 )
margin_left = 620.0
margin_top = 40.0
margin_right = 1013.0
margin_bottom = 508.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QTDSVoltas" type="RichTextLabel" parent="."]
margin_left = 648.913
margin_top = 66.8903
margin_right = 778.913
margin_bottom = 116.89
custom_fonts/normal_font = SubResource( 1 )
text = "Voltas:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VarVoltas" type="RichTextLabel" parent="."]
modulate = Color( 0.870588, 0.160784, 0.160784, 1 )
margin_left = 780.79
margin_top = 68.7807
margin_right = 879.79
margin_bottom = 109.781
custom_fonts/normal_font = SubResource( 1 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempoVolta" type="RichTextLabel" parent="."]
margin_left = 641.878
margin_top = 176.561
margin_right = 763.878
margin_bottom = 222.561
custom_fonts/normal_font = SubResource( 1 )
text = "Tempo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VarTempoVolta" type="RichTextLabel" parent="."]
modulate = Color( 0.886275, 0.129412, 0.129412, 1 )
margin_left = 771.913
margin_top = 175.671
margin_right = 1009.91
margin_bottom = 221.671
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dificuldade" type="RichTextLabel" parent="."]
margin_left = 624.808
margin_top = 300.616
margin_right = 826.808
margin_bottom = 372.616
custom_fonts/normal_font = SubResource( 1 )
text = "Dificuldade:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pista" type="RichTextLabel" parent="."]
margin_left = 623.0
margin_top = 437.0
margin_right = 771.0
margin_bottom = 509.0
custom_fonts/normal_font = SubResource( 1 )
text = "Pista:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VarDificuldade" type="RichTextLabel" parent="."]
modulate = Color( 0.909804, 0.101961, 0.101961, 1 )
margin_left = 818.633
margin_top = 299.726
margin_right = 1010.63
margin_bottom = 367.726
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VarPista" type="RichTextLabel" parent="."]
modulate = Color( 0.909804, 0.101961, 0.101961, 1 )
margin_left = 716.885
margin_top = 438.959
margin_right = 908.885
margin_bottom = 506.959
custom_fonts/normal_font = SubResource( 1 )
text = "aa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animaçãovariaveis"
"anims/Animaçãovariaveis" = SubResource( 2 )

[node name="MouseEntrabotao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -19.184

[node name="SelecionarMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -21.969

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -19.184
autoplay = true
[connection signal="mouse_entered" from="voltarmenu" to="." method="_on_voltarmenu_mouse_entered"]
[connection signal="pressed" from="voltarmenu" to="." method="voltar_menu"]
[connection signal="mouse_entered" from="VerRanking" to="." method="_on_VerRanking_mouse_entered"]
[connection signal="pressed" from="VerRanking" to="." method="ver_ranking"]
